[workspace]
members = ["golden-tests", "in-memory-network", "quinn-workbench"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
async-lock = "3.4.0"
bon = "3.3.0"
bytes = "1.11.1"
byteorder = "1.5.0"
clap = { version = "4", features = ["derive"] }
console = "0.15.11"
event-listener = "5.4.0"
fastrand = { version = "2.1.0" }
futures = { version = "0.3.31", default-features = false, features = ["alloc", "std", "async-await"] }
futures-util = "0.3.31"
hex = "0.4.3"
parking_lot = "0.12.3"
pcap-file = "2.0.0"
pin-project-lite = "0.2.16"
pnet_packet = "0.34.0"
quinn = "0.12"
quinn-proto = { version = "0.12", features = ["qlog"] }
quote = "1.0.40"
rcgen = "0.13.1"
rustls = { version = "0.23.8", default-features = false, features = ["ring"] }
serde = "1.0.203"
serde_json = "1.0.117"
serde_ignored = "0.1.14"
serde_with = "3.11.0"
similar = { version = "2.7.0", features = ["inline"] }
syn = {version = "2.0.101", features = ["full"]}
thiserror = "2.0.12"
tokio = { version = "1.37.0", features = ["test-util", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0" }

[profile.profiling]
inherits = "release"
debug = true

[patch.crates-io]
quinn = { git = "https://github.com/quinn-rs/quinn.git", rev = "dc8640052a64eb05b463b490b0a0a0f4b0cef9a6" }
quinn-proto = { git = "https://github.com/quinn-rs/quinn.git", rev = "dc8640052a64eb05b463b490b0a0a0f4b0cef9a6" }
