[package]
name = "in-memory-network"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-lock.workspace = true
bytes.workspace = true
byteorder.workspace = true
fastrand.workspace = true
futures.workspace = true
futures-util.workspace = true
hex.workspace = true
parking_lot.workspace = true
pcap-file.workspace = true
pnet_packet.workspace = true
quinn.workspace = true
rustls.workspace = true
uuid.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
bon.workspace = true
rcgen.workspace = true
