[package]
name = "quinn-workbench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-lock.workspace = true
clap.workspace = true
event-listener.workspace = true
fastrand.workspace = true
futures.workspace = true
in-memory-network = { path = "../in-memory-network" }
quinn = { workspace = true, features = ["rustls-ring", "platform-verifier"] }
quinn-proto.workspace = true
rustls.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_ignored.workspace = true
serde_with.workspace = true
parking_lot.workspace = true
